--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "dependencies": {
     "babel-preset-env": "^1.7.0",
-    "ejs": "^3.1.6",
     "esm": "^3.2.25",
     "express": "^4.17.1"
   },
@@ -18,5 +17,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": ">=10.0.0"
+  }
 }
