--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "esm": "^3.2.25",
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
+  },
   "scripts": {
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
