--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
-    "start": "babel-node index.js"
+    "start": "babel-node src/index.js"
   },
   "babel": {
     "presets": [
