--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "babel-node src/index.js"
+    "start": "babel-node index.js"
   },
   "babel": {
     "presets": [
