--- a/package.json
+++ b/package.json
@@ -7,9 +7,29 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.6.0",
     "babel-preset-env": "^1.7.0",
-    "dotenv": "^10.0.0",
+    "aws-sdk": "^2.956.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase-admin": "^9.10.0",
+    "helmet": "^3.16.0",
+    "hpp": "^0.2.2",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.12.12",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "nodemailer": "^6.6.1",
+    "nodemon": "^2.0.4",
+    "path": "^0.12.7",
+    "slugify": "^1.4.0",
+    "twilio": "^3.65.0",
+    "validator": "^10.11.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {},
   "scripts": {
